[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v3"] }
fastnbt = "2.5.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
flate2 = "1.0.28"
regex = "1.10.4"
lazy_static = "1.4.0"
rsa = "0.9.6"
rand="0.8.5"
sha1="0.10.6"
rsa-der = "0.3.0"